update task 1 part 1&2

--- a/task-1/stanza-expt.ipynb
+++ b/task-1/stanza-expt.ipynb
@@ -77,28 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 1\tupos: PRON\tword: My\thead id: 3\thead: laptop\tdeprel: nmod:poss\n",
-      "id: 2\tupos: ADJ\tword: red\thead id: 3\thead: laptop\tdeprel: amod\n",
-      "id: 3\tupos: NOUN\tword: laptop\thead id: 5\thead: cheap\tdeprel: nsubj\n",
-      "id: 4\tupos: AUX\tword: is\thead id: 5\thead: cheap\tdeprel: cop\n",
-      "id: 5\tupos: ADJ\tword: cheap\thead id: 0\thead: root\tdeprel: root\n",
-      "id: 6\tupos: PUNCT\tword: ,\thead id: 5\thead: cheap\tdeprel: punct\n",
-      "id: 7\tupos: PRON\tword: her\thead id: 8\thead: laptop\tdeprel: nmod:poss\n",
-      "id: 8\tupos: NOUN\tword: laptop\thead id: 10\thead: blue\tdeprel: nsubj\n",
-      "id: 9\tupos: AUX\tword: is\thead id: 10\thead: blue\tdeprel: cop\n",
-      "id: 10\tupos: ADJ\tword: blue\thead id: 5\thead: cheap\tdeprel: parataxis\n"
+      "id: 1\tupos: PRON\tword: My\thead id: 3\thead: dog\tdeprel: nmod:poss\n",
+      "id: 2\tupos: NOUN\tword: fat\thead id: 3\thead: dog\tdeprel: compound\n",
+      "id: 3\tupos: NOUN\tword: dog\thead id: 4\thead: vocalizes\tdeprel: nsubj\n",
+      "id: 4\tupos: VERB\tword: vocalizes\thead id: 0\thead: root\tdeprel: root\n",
+      "id: 5\tupos: ADV\tword: well\thead id: 4\thead: vocalizes\tdeprel: advmod\n",
+      "id: 6\tupos: ADP\tword: into\thead id: 10\thead: microphone\tdeprel: case\n",
+      "id: 7\tupos: PRON\tword: my\thead id: 10\thead: microphone\tdeprel: nmod:poss\n",
+      "id: 8\tupos: ADJ\tword: new\thead id: 10\thead: microphone\tdeprel: amod\n",
+      "id: 9\tupos: ADJ\tword: pink\thead id: 10\thead: microphone\tdeprel: amod\n",
+      "id: 10\tupos: NOUN\tword: microphone\thead id: 4\thead: vocalizes\tdeprel: obl\n"
      ]
     }
    ],
    "source": [
-    "sentences = [\"My red laptop is cheap, her laptop is blue\"]\n",
+    "sentences = [\"My fat dog vocalizes well into my new pink microphone\"]\n",
     "\n",
     "def print_dep(sentences):\n",
     "    for sentence in sentences:\n",
@@ -110,19 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['red', 'cheap', 'blue'] ([{'ADJ': 'cheap', 'NOUN': 'laptop', 'dependency': 'nsubj'}, {'ADJ': 'blue', 'NOUN': 'laptop', 'dependency': 'nsubj'}, {'ADJ': 'red', 'NOUN': 'laptop', 'dependency': 'amod'}], ['laptop', 'laptop'])\n"
+      "['new', 'pink'] ([{'ADJ': 'new', 'NOUN': 'microphone', 'dependency': 'amod'}, {'ADJ': 'pink', 'NOUN': 'microphone', 'dependency': 'amod'}], ['fat', 'dog', 'microphone'])\n"
      ]
     }
    ],
    "source": [
-    "sentences = [\"My red laptop is cheap, her laptop is blue\"]\n",
+    "sentences = [\"My fat dog vocalizes well into my new pink microphone\"]\n",
     "\n",
     "def find_adjectives(sentence):\n",
     "    adjectives = []\n",
@@ -143,6 +143,8 @@
     "            if word.upos == \"NOUN\" and head_word_text in adjectives:\n",
     "                # Append in the form: (adjective, noun, deprel)\n",
     "                triplets.append({\"ADJ\": head_word_text, \"NOUN\": word.text, \"dependency\": word.deprel})\n",
+    "                nouns.append(word.text)\n",
+    "            elif word.upos == \"NOUN\":\n",
     "                nouns.append(word.text)\n",
     "\n",
     "    for sentence in doc.sentences:\n",
